--- a/index.mjml
+++ b/index.mjml
@@ -125,6 +125,31 @@
                 padding: 3px 8px !important;
             }
 
+            .mini_plan_class > table > tbody > tr:nth-child(1) > td{
+                padding: 10px 0px !important;
+            }
+            
+            .mini_plan_class > table > tbody > tr:nth-child(2) > td{
+                padding: 28px 38px !important;
+            }
+
+            .mini_plan_text_class{
+                word-spacing: 2px !important;
+            }
+
+            .section_7{
+                background-color: #FEC82D !important;
+            }
+
+            .section_7 > table > tbody > tr > td{
+                padding: 0 !important;
+            }
+
+            .section_7_title > div{
+                text-align: center !important;
+                font-weight: 700 !important;
+            }
+
         </mj-style>
     </mj-head>
     <!-- Body del email -->
@@ -211,6 +236,24 @@
                         Find Tickets
                     </mj-button>
                 </mj-column>
+            </mj-section>
+            <mj-section css-class="section_6">
+                <mj-column css-class="mini_plan_class" width="100%">
+                    <mj-image src="https://cdn.warriors.com/crm/2021-22/GSW/Ticketing/MiniPlan-Cup-580x150.jpg" alt="Mini-plan banner" />
+                    <mj-text css-class="mini_plan_text_class" font-family= "sans-serif" font-size="17px" font-weight="500" line-height="1.3">
+                        Secure your Warriors Cup Mini-Plan <span style="color:red; font-weight: 600;     text-decoration: underline;">NOW</span>! This mini-plan gets you better seat locations and pricing, plus save on taxes and fees* for all Warriors Cup games and the Home Opener, presented by Chase Freedom! <span style="color:blue; font-weight: 600;">Learn More &#x2192;</span> 
+                    </mj-text>
+                </mj-column>
+            </mj-section>
+            <mj-section css-class="section_7">
+                <mj-column width="100%">
+                    <mj-text css-class="section_7_title" font-family="sans-serif" font-size="20px" line-height="1">
+                        Follow Us
+                    </mj-text>
+                    <mj-social css-class="section_7_social">
+                        
+                    </mj-social>
+                    </mj-column>
             </mj-section>
         </mj-wrapper>
     </mj-body>
